# nuxeo-mcp-server

./: .gitignore  AGENTS.md  DEVELOPER.md  Dockerfile  Dockerfile-entrypoint.sh  README.md  USAGE.md  docker-compose.yml  llm.txt  mcp.json  nuxeo_mcp_config.md  pylock.toml  pyproject.toml
.github/: dependabot.yml
.github/actions/setup-and-install-dep/: action.yml
.github/workflows/: build-and-unit-tests.yml  docker-integration-tests.yml  integration-tests.yml  package-docker-image.yml  updatecli.yml
.updatecli/updatecli.d/: python.yaml
src/nuxeo_mcp/: es_passthrough.py  es_query_builder.py  nl_parser.py  resources.py  server.py  server_manager.py  tools.py  utility.py
tests/: standalone_test_es_debug.py  test_es_passthrough.py  test_es_probe.py  test_es_query_builder.py  test_mcp_e2e.py  test_nl_parser.py  test_nl_parser_es.py  test_regression_fixes.py  test_search_filters.py  test_semantic_search.py
